force-app/main/default/objects/Achievers__c/Achievers__c.object-meta.xml
<CustomObject>
    <label>Achievers</label>
    <nameField>
        <label>Achievers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Achievers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>