force-app/main/default/objects/Achievers__c/fields/Testimonial__c.field-meta.xml
<CustomField>
    <fullName>Testimonial__c</fullName>
    <label>Testimonial</label>
    <type>Url</type>
</CustomField>