force-app/main/default/objects/Achievers__c/fields/X10th__c.field-meta.xml
<CustomField>
    <fullName>X10th__c</fullName>
    <label>10th</label>
    <length>255</length>
    <type>Text</type>
</CustomField>