force-app/main/default/objects/Achievers__c/fields/X12th__c.field-meta.xml
<CustomField>
    <fullName>X12th__c</fullName>
    <label>12th</label>
    <length>255</length>
    <type>Text</type>
</CustomField>